[JAEGER] Bug 583946: don't doubly mark free a pinned register that was stolen during immutable syncing, r=dvander